# runfile

./: README.md  global.json
.devcontainer/: devcontainer.json
classlibproject/ClassLib/: Greeter.cs
classlibproject/samples/: Directory.Build.targets  hello.cs
flat/: The Tell-Tale Heart.txt  apphost.cs  apphost.run.json  apphost2.cs  cat.benchmarks.cs  cat.cs  cat.helpers.cs  envvars.cs  filepath.cs  hello.cs  mstest.example.cs  nunit.example.cs  pinvoke.cs  playwright.cs  spaceinvaders.cs  wait.cs  xunit.example.cs
helloblazor/: helloblazor.cs
helloblazor/pages/: Index.razor
helloblazor/wwwroot/: app.css
nativelib/: CMakeLists.txt  nativelib.cpp
razorapp/: App.razor  _Imports.razor  razorapp.cs  razorapp.launchsettings
webapi/: webapi.cs
